--- a/tex/main.tex
+++ b/tex/main.tex
@@ -16,9 +16,10 @@
 %using \input{filename}. No preamble etc should be in the files that are being included.
 % \begin{document} etc should not be included in the files either.
 \input{sections/project_description}
-\input{sections/impulse_response}
-\input{sections/ir_capture}
-\input{sections/ir_implementation}
+\input{sections/requirement_specification}
+\input{sections/project_plan}
+\input{sections/project_research}
+\input{sections/project_expectations}
 \input{sections/conclusion}
 %include content sections here
 %\input{briefUseCases}
