--- a/tex/sections/project_description.tex
+++ b/tex/sections/project_description.tex
@@ -1,6 +1,38 @@
 \chapter{Project Description}
-Measure impulse response (IR) of guitar power amplifier and cabinet using both a linear measuring microphone (M1) and a typically applied microphone (M2). Measure the IR’s using different microphone placements relative to the center of the speaker-cone in two dimensions, thus creating a 2D matrix of which an infinite number of IR’s with unique placements can be made. \\
-Calculate the difference between the IR’s of both the linear measuring microphone (M1) and the typically applied microphone (M2), in order to create a model of the typically applied microphone. \\
-Use this model as a filter to the M1 IR’s and create M3 IR’s that therotically should be similar to M2 IR’s. \\
-Apply the IR’s of M1, M2 and M3 to an electrical signal from an electric guitar running through a guitar preamp*. Describe the differences and qualities in tone using M1, M2 and M3 and also the difference in the microphone placement. \\
-Finally attempt to tweak one or more of the IR’s to create an IR that sounds as good as possible.
+Development of multi-channel audio/video playback system for touring artists. This project will
+integrate both hardware- and software-design with emphasis on hardware design.
+Approx. 70-80 percent of modern Danish and international touring artists utilize audio backing tracks
+(prerecorded material played back on some chosen device) and video content projected on large
+screens as part of their performance. \\
+However, there are a multitude of options ranging from iPod-playback to complex, customized
+systems operated by technical personnel. \\
+Common for these systems is instability, making artists to purchase redundant backup-systems in
+order to deliver their audience a flawless and uninterrupted performance. \newline
+
+In a typical scenario, at least one laptop – often several laptops – with various audio- and/or videointerfaces, handles and runs the audio backing track and video-content in sync. \\
+This project will integrate both audio- and video-handling in a single 19” rack-mounted device and
+provide the user with a user-friendly GUI (Graphical User Interface) while complying with
+international standards for audio and video and electronic devices. \newline
+
+For design and implementation of the device, a research is needed in: \\
+- Circuit/hardware design \\
+- D/A audio converters \\
+- Standardized audio input/output formats \\
+- Audio file formats \\
+- Standardized video input/output formats \\
+- Video file formats \\
+- Time codes for synchronization \\
+- User feedback for feasible GUI design \newline
+
+This project is already in the early stages of development as part of an apprenticeship in
+entrepreneurship (iværksætterpraktik) at Navitas Science and Innovation. \\
+Current status on project: \\
+- Requirements specification finished \\
+- FURPS finished \\
+- Market research ongoing \\
+The project is requesting confidentiality as the device is in development intended for market release to
+prosumers in the music industry, thus an eventual project partner must sign a non-disclosure
+agreement. \newline
+
+Project partner profile: Electronic Engineering student or Information and Communication
+Technology student.
