--- a/tex/config.tex
+++ b/tex/config.tex
@@ -1,22 +1,22 @@
 %configurationfile
 \pagestyle{AuHandin}
 
-\title{Guitar Cabinet Impulse Response}
+\title{E18 E6BAC-01 Forberedelse til Bachelorprojekt}
 
 %author is not used in generating the content for the tile page so is not needed. use the group members function instead.
 %\author{Tonni Follmann}
 
 %Vejlederens navn
-%\SetVejleder{Carl Jakobsen}
+\SetVejleder{Torben Gregersen}
 %Skole/Universitetets navn
 \SetUniversity{Aarhus University}
 %Projektnavn
-\SetProject{AUTE - Project}
+\SetProject{Designing Multichannel Audio- and Video-playback system: Showman}
 %Produktnavn
-\SetProductname{DSP i Audioteknologi}
+\SetProductname{Forprojektrapport}
 %Gruppe Nummer
 %\SetGroupNumber{5}
 %Add the names of all the members in the group, can handle 1 to 8 members, names are added one per set of [], that means if only 1 person should be the author of this document, only one set of brackets [] are needed.
-\GroupMemberNames[Frodi Vestergaard Dam][Michael Engel][Ali Saleh][Minik Olsen]{}
+\GroupMemberNames[Minik Nathanielsen Olsen]{}
 %add student numbers of the students, must have the exact same order as the names listed above.
-\GroupMemberStudentNo[201410870][201309486][201509807][201600341]{}
+\GroupMemberStudentNo[201600341]{}
