Section Requirement Specifications updated
Section Requirement Specifications updated.

--- a/tex/sections/project_description.tex
+++ b/tex/sections/project_description.tex
@@ -1,4 +1,6 @@
 \chapter{Project Description}
+The following text is the project description pulled from the project catalog. \newline
+
 Development of multi-channel audio/video playback system for touring artists. This project will
 integrate both hardware- and software-design with emphasis on hardware design.
 Approx. 70-80 percent of modern Danish and international touring artists utilize audio backing tracks
@@ -9,7 +11,8 @@ systems operated by technical personnel. \\
 Common for these systems is instability, making artists to purchase redundant backup-systems in
 order to deliver their audience a flawless and uninterrupted performance. \newline
 
-In a typical scenario, at least one laptop – often several laptops – with various audio- and/or videointerfaces, handles and runs the audio backing track and video-content in sync. \\
+In a typical scenario, at least one laptop – often several laptops – with various audio- and/or videointerfaces, handles and runs the audio backing track and video-content in sync. \newline
+
 This project will integrate both audio- and video-handling in a single 19” rack-mounted device and
 provide the user with a user-friendly GUI (Graphical User Interface) while complying with
 international standards for audio and video and electronic devices. \newline
