Section Requirement Specifications updated
Section Requirement Specifications updated.

--- a/tex/sections/project_description.tex
+++ b/tex/sections/project_description.tex
@@ -5,7 +5,8 @@ Development of multi-channel audio/video playback system for touring artists. Th
 integrate both hardware- and software-design with emphasis on hardware design.
 Approx. 70-80 percent of modern Danish and international touring artists utilize audio backing tracks
 (prerecorded material played back on some chosen device) and video content projected on large
-screens as part of their performance. \\
+screens as part of their performance. \newline
+
 However, there are a multitude of options ranging from iPod-playback to complex, customized
 systems operated by technical personnel. \\
 Common for these systems is instability, making artists to purchase redundant backup-systems in
@@ -32,7 +33,8 @@ entrepreneurship (iværksætterpraktik) at Navitas Science and Innovation. \\
 Current status on project: \\
 - Requirements specification finished \\
 - FURPS finished \\
-- Market research ongoing \\
+- Market research ongoing \newline
+
 The project is requesting confidentiality as the device is in development intended for market release to
 prosumers in the music industry, thus an eventual project partner must sign a non-disclosure
 agreement. \newline
