--- a/tex/sections/requirement_specification.tex
+++ b/tex/sections/requirement_specification.tex
@@ -48,31 +48,70 @@ User is the primary actor. User creates the playlist and uploads the playlist to
 The Graphical User Interface (GUI) is the secondary actor. The GUI is the software application that handles the file management and playlist creation that is uploaded to Showman's interaction with Showman is outlined in detail in the specification for the individual Use Cases. \newline
 
 \subsection{Functional Requirements}
-This section presents the functional requirements outlined for Showman. The figure below presents a Use-Case diagram that displays the actors' relations to the Use-Cases followed by Fully Dressed Use-Cases.
+This section presents the functional requirements outlined for Showman. The figure below presents a Use-Case diagram that displays the actors' relations to the Use-Cases followed by Fully Dressed Use-Cases. \newline
 
-\subsubsection{Use-Case Diagram}
+To keep this document brief and concise, only the first Use-Case is included. The additional Use-Cases will be explored further in the bachelor project.
 
+%\subsubsection{Use-Case Diagram}
 
 \subsubsection{Use-Case 1}
 
+\begin{figure}[H]
+\centering
+\includegraphics[scale=1]{./pictures/UC1.png}
+\caption{Use-Case diagram of Use-Case 1.}
+\label{fig:UC1.png}
+\end{figure}
 
-\subsubsection{Use-Case 2}
+%\subsubsection{Use-Case 2}
 
 
-\subsubsection{Use-Case 3}
+%\subsubsection{Use-Case 3}
 
 
-\subsubsection{Use-Case 4}
+%\subsubsection{Use-Case 4}
 
 
-\subsubsection{Use-Case 5}
+%\subsubsection{Use-Case 5}
 
 
 \subsection{Non-Functional Requirements}
+Non-Functional Requirements (NFRs) are quality-demands, which are the qualities or constraints on the services of the functions offered by the system rather than a specific behaviour. Qualities are properties or characteristics of the system that its stakeholders care about and hence will affect their degree of satisfaction with the system. \\
+Quality demands/NFRs should satisfy two attributes: \\
+- Must be verifiable - e.g. measurable metrics.
+- Should be objective. \newline
 
+The NFRs are drawn up using two techniques: FURPS and MoSCoW to determine system requirements and to prioritize and rank Non-Functional Requirements. \\
+
+\subsection{FURPS+}
+FURPS+ is an acronym that represents a model classify a product's properties: \textbf{F}unctionality, \textbf{U}sability, \textbf{R}eliability, \textbf{P}erformance, \textbf{S}upportability and \textbf{+} (Design and Physical constraints, Interfaces, Legal, Test, Reuse, Economic constraints, Aesthetics, Comprehensibility, Techology tradeoff, etc.)  \\
+
+\subsubsection{\textbf{F} - Functionality}
+The functionality describes the capability (size and generality of feature set), reusability (combability, interoperability, portability) and security (safety and exploitability) of a system. \\
+
+\subsubsection{\textbf{U} - Usability}
+The usability describes the human factors, aesthetics, consistency, documentation and responsivenes of the system. \\
+
+\subsubsection{\textbf{R} - Reliability}
+The reliability describes the availability (failure frequency, robustness/durability/resilience, failure extent and time-length (recoverability/survivability), predictability (stability) and accuracy (frequency or severity of error) of the system. \\
+
+\subsubsection{\textbf{P} - Performance}
+The performance describes the speed, efficiency, resource consumption (power, RAM, cache, etc.), throughput, capacity, scalability of the system. \\
+
+\subsubsection{\textbf{S} - Supportability
+The supportability describes the serviceability, mantainability, sustainability, repair speed, testability, flexibility (modifiability, configurability, adaptabilit, extenxsibility, modularity), installability and localizability of the system. \\
+
+\subsubsection{\textbf{?} - Design constraints}
+The “+” of the FURPS+ acronym allows us to specify constraints, including design, implementation, interface, and physical constraints. \\
+
+{\textbf{Design Constraints} – A design constraint, as the name implies, limits the design — for example, requiring a relational database stipulates the approach that we take in developing the system. \\
+
+{\textbf{Implementation Constraints} – An implementation constraint puts limits on coding or construction – standards, platform, or implementation language. \\
+
+{\textbf{Interface Constraints} – An interface constraint is a requirement to interact with an external item. When you develop within an enterprise, quite often you have to interact with external systems. \\
+
+{\textbf{Physical Constraints} – Physical constraints affect the hardware used to house the system – for example, shape, size, and weight. \\
 
 \subsection{MoSCoW}
 
-
-\subsection{FURPS+}
 
