--- a/tex/config.tex
+++ b/tex/config.tex
@@ -1,7 +1,7 @@
 %configurationfile
 \pagestyle{AuHandin}
 
-\title{E18 E6BAC-01 Forberedelse til Bachelorprojekt}
+\title{E18 E6BAC-01}
 
 %author is not used in generating the content for the tile page so is not needed. use the group members function instead.
 %\author{Tonni Follmann}
@@ -11,9 +11,9 @@
 %Skole/Universitetets navn
 \SetUniversity{Aarhus University}
 %Projektnavn
-\SetProject{Designing Multichannel Audio- and Video-playback system: Showman}
+\SetProject{Designing Multichannel Audio- and Video-Playback System: Showman}
 %Produktnavn
-\SetProductname{Forprojektrapport}
+\SetProductname{Preparation for Bachelor Project}
 %Gruppe Nummer
 %\SetGroupNumber{5}
 %Add the names of all the members in the group, can handle 1 to 8 members, names are added one per set of [], that means if only 1 person should be the author of this document, only one set of brackets [] are needed.
