--- a/tex/sections/project_expectations.tex
+++ b/tex/sections/project_expectations.tex
@@ -1,2 +1,6 @@
 \chapter{Project Expectations}
+After initial project proposal was accepted, an application for project working space was filed to secure an assigned working space at the university campus. As of this document's handin, no working space has been assigned yet. \\
+
+
+
 Evt. aftale om forventet arbejdssted og tid.
