--- a/tex/sections/project_research.tex
+++ b/tex/sections/project_research.tex
@@ -1,2 +1,35 @@
 \chapter{Project Research}
 Undersøgelse af tilsvarende projekter og relevant litteratur.
+
+\subsection{Similar Projects}
+Mircea Gabriel Eftemie, medialogy at Aalborg University.
+
+\subsection{Similar Products}
+
+
+\subsubsection{Cymatic Audio LP-16}
+
+
+\subsubsection{Ableton Live}
+
+
+\subsubsection{QLab}
+
+
+\subsubsection{MAINSTAGE}
+
+
+\subsubsection{Logic Pro X}
+
+
+\subsubsection{BlackBeagle}
+
+
+\subsubsection{Arduino}
+
+
+\subsubsection{Raspberry Pi}
+
+
+\subsubsection{Linux Ubuntu Studio}
+
